# dicom-mr-classifier

./: Dockerfile  README.md  classification_from_label.py  dicom-mr-classifier.py  dicom_mr_classifier.py  manifest.json  pyproject.toml  requirements.txt  run.py  run_classifier
tests/: config.json  run.sh  test_classification_from_label.py
